fix tooltip not showing on buttons

--- a/packages/debug-contracts/src/styles.css
+++ b/packages/debug-contracts/src/styles.css
@@ -121,7 +121,7 @@
   }
 
   .btn:disabled {
-    @apply opacity-50 cursor-not-allowed pointer-events-none;
+    @apply opacity-50;
   }
 
   .btn:hover:not(:disabled) {
